add article menu page

--- a/src/road.html
+++ b/src/road.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Исландия</title>
-<link href="/main.bundle.css" rel="stylesheet"></head>
+</head>
 
 <body>
     <header class="header">
         <div class="header__logo">Исландия</div>
         <ul class="header__menu">
             <li class="header__menu-item"><a href="" class="header__menu-link link">О нас</a></li>
-            <li class="header__menu-item"><a href="./menu_article.html" class="header__menu-link">Статьи</a></li>
+            <li class="header__menu-item"><a href="" class="header__menu-link">Статьи</a></li>
             <li class="header__menu-item"><a href="" class="header__menu-link">Контакты</a></li>
             <li class="header__menu-item"><a href="" class="header__menu-link">Галерея</a></li>
         </ul>
@@ -33,10 +33,12 @@
         <div class="footer__contact">
             <a href="https:/vk.com/" class="footer__contact-item link"><img src="./assets/img/vk_logo.png" alt=""></a>
             <a href="twitter.com" class="footer__contact-item link"><img src="./assets/img/twitter_logo.png" alt=""></a>
-            <a href="instagram.com" class="footer__contact-item link"><img src="./assets/img/instagram_logo.png" alt=""></a>
-            <a href="facebook.com" class="footer__contact-item link"><img src="./assets/img/facebook_logo.png" alt=""></a>
+            <a href="instagram.com" class="footer__contact-item link"><img src="./assets/img/instagram_logo.png"
+                    alt=""></a>
+            <a href="facebook.com" class="footer__contact-item link"><img src="./assets/img/facebook_logo.png"
+                    alt=""></a>
         </div>
     </footer>
-<script src="/vendors~article~main~menu_article.bundle.js"></script><script src="/main.bundle.js"></script></body>
+</body>
 
 </html>
