--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document Webpack</title>
+    <title>Исландия</title>
 </head>
 
 <body>
-    <span>kjgjhgjhg</span>
+    <header class="header">
+        <div class="header__logo">Исландия</div>
+        <ul class="header__menu">
+            <li class="header__menu-item"><a href="" class="header__menu-link link">О нас</a></li>
+            <li class="header__menu-item"><a href="./menu_article.html" class="header__menu-link">Статьи</a></li>
+            <li class="header__menu-item"><a href="" class="header__menu-link">Контакты</a></li>
+            <li class="header__menu-item"><a href="" class="header__menu-link">Галерея</a></li>
+        </ul>
+        <form class="header__search-form search-form">
+            <input class="search-form__input" type="text" placeholder="  Искать здесь">
+            <button class="search-form__button" type="button"></button>
+        </form>
+    </header>
+    <section class="content">
+        <div class="content__description">
+            <span class="content__description_header">Исландия - страна льдов</span>
+            <span class="content__description_text">холоднее звучит, нежели выглядит.</span>
+        </div>
+        <a class="content__button link">Узнать больше</a>
+    </section>
+    <footer class="footer">
+        <div class="footer__contact">
+            <a href="https:/vk.com/" class="footer__contact-item link"><img src="./assets/img/vk_logo.png" alt=""></a>
+            <a href="twitter.com" class="footer__contact-item link"><img src="./assets/img/twitter_logo.png" alt=""></a>
+            <a href="instagram.com" class="footer__contact-item link"><img src="./assets/img/instagram_logo.png"
+                    alt=""></a>
+            <a href="facebook.com" class="footer__contact-item link"><img src="./assets/img/facebook_logo.png"
+                    alt=""></a>
+        </div>
+    </footer>
 </body>
 
 </html>
